fix: 로또 생성 후 오름차순으로 정렬하도록 오류 수정